// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`free-response widget should snapshot on mobile: first mobile render 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph"
      data-perseus-paragraph-index="0"
    >
      <div
        class="paragraph"
      >
        <div
          class="perseus-widget-container widget-nohighlight widget-block"
        >
          <div
            class="default_xu2jcg-o_O-container_lci7r"
          >
            <label
              class="labelAndTextarea_b4ep1"
            >
              <span
                class="text_f1191h-o_O-LabelLarge_5s82ln"
              >
                test-question
              </span>
              <div
                class="default_xu2jcg-o_O-inlineStyles_zdxht7"
              >
                <textarea
                  aria-invalid="false"
                  aria-required="false"
                  class="textarea_o89kg2-o_O-LabelMedium_1rew30o-o_O-default_l06vru-o_O-defaultFocus_lrnqlz-o_O-textarea_1x0fg6n"
                  id=":r1:"
                  placeholder="test-placeholder"
                />
              </div>
            </label>
            <div
              class="default_xu2jcg"
            >
              <span
                class="text_f1191h"
              >
                0 / 500 Characters
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`free-response widget should snapshot: first render 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph"
      data-perseus-paragraph-index="0"
    >
      <div
        class="paragraph"
      >
        <div
          class="perseus-widget-container widget-nohighlight widget-block"
        >
          <div
            class="default_xu2jcg-o_O-container_lci7r"
          >
            <label
              class="labelAndTextarea_b4ep1"
            >
              <span
                class="text_f1191h-o_O-LabelLarge_5s82ln"
              >
                test-question
              </span>
              <div
                class="default_xu2jcg-o_O-inlineStyles_zdxht7"
              >
                <textarea
                  aria-invalid="false"
                  aria-required="false"
                  class="textarea_o89kg2-o_O-LabelMedium_1rew30o-o_O-default_l06vru-o_O-defaultFocus_lrnqlz-o_O-textarea_1x0fg6n"
                  id=":r0:"
                  placeholder="test-placeholder"
                />
              </div>
            </label>
            <div
              class="default_xu2jcg"
            >
              <span
                class="text_f1191h"
              >
                0 / 500 Characters
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
